2010-09-14  Marco Randazzo <marco.randazzo@iit.it>
	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h
	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.h
	* src/libYARP_dev/src/ControlBoardInterfacesImpl.cpp
	* src/libYARP_dev/src/RemoteControlBoard.cpp
	
	Added two new methods to torqueControl interface: getTorqueRange(), getTorqueRanges()
	
2010-09-10  Lorenzo Natale  <lorenzo.natale@iit.it>
   * src/libYARP_math/
   
   Split classes into files for better code organization. Use gsl for
   normal distribution, added support for normal distributions and matrix
   generation.
   
2010-09-08  Lorenzo Natale  <lorenzo.natale@iit.it>
   * src/libYARP_math/src/Rand.cpp
   * src/libYARP_math/include/yarp/math/Rand.h
   * src/libYARP_math/harness/MathTest.cpp:
   
   Modified random generation routines to use gsl, updated doxygen and 
   regression tests.

2010-09-08  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_OS/src/Ping.cpp: add a utility for doing some basic
	measurement of port connection-communicate-disconnection times.
	Callable as "yarp ping --time /PORT"

2010-09-03  Paul Fitzpatrick  <paulfitz@debian.humanoids.iit.it>

	* src/libYARP_OS/src/BottleImpl.cpp: correctly copy an
	empty Bottle [thanks Carlo Ciliberto] [thanks Ugo Pattacini]

	* src/libYARP_dev/src/RemoteControlBoard.cpp: as for
	ServerControlBoard.cpp

	* src/libYARP_dev/src/ServerControlBoard.cpp: adapt to
	recent elimination of indirect ACE dependencies 
	[thanks Ugo Pattacini]

2010-09-01  Paul Fitzpatrick  <paulfitz@debian.humanoids.iit.it>

	* example/swig/yarp.i: tell swig not to freak out about
	API tags [thanks Lars Schillingmann]

2010-08-31  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* conf/template/yarp_config_api.h.in: preparation for
	explicitly tagging public API.

	* src/libYARP_OS/include/yarp/os/Run.h: make sendToServer
	public (Anne van Rossum has established a use-case for it)
	[thanks Anne van Rossum]
